--- a/1-basic-react/package.json
+++ b/1-basic-react/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "dependencies": {
+    "babel-core": "^6.25.0",
     "babel-loader": "^6.2.0",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-react-html-attrs": "^2.0.0",
@@ -15,7 +16,7 @@
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.16.5"
   },
   "devDependencies": {},
   "scripts": {
